--- a/ruby-install/PKGBUILD
+++ b/ruby-install/PKGBUILD
@@ -9,7 +9,7 @@ license=('MIT')
 depends=('bash')
 makedepends=()
 source=("https://github.com/postmodern/ruby-install/archive/v0.5.0.tar.gz")
-sha1sums=('SKIP')
+sha1sums=('d8061e46fe2ea40f867e219cdd7d28fea24f47ca')
 
 package() {
   _make_install
