--- a/p3wm/PKGBUILD
+++ b/p3wm/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Whyme Lyu <callme5long@gmail.com>
 pkgname=p3wm
-pkgver=0.6.1
+pkgver=0.6.2
 pkgrel=1
 pkgdesc="Three-way merge .pacnew files"
 arch=('any')
@@ -24,7 +24,6 @@ optdepends=(
 )
 makedepends=('git' 'asciidoctor')
 source=("https://github.com/5long/$pkgname/archive/v$pkgver.tar.gz")
-sha256sums=('0e025bbd501122725eb5809e1574fc703ad7086b65dcf1b47d4f35f7de4fd2cd')
 build() {
   cd "$pkgname-$pkgver"
   make
@@ -34,3 +33,6 @@ package() {
   cd "$pkgname-$pkgver"
   make PREFIX="$pkgdir/usr" install
 }
+
+# Put checksum at the end so we can update it easier w/ `makepkg -g >> PKGBUILD`
+sha256sums=('f7f1067d10660b82dadd883aab09fab36e1cc53f28e2249d02884e96670f7188')
