dummy packages handles array

--- a/dummy/PKGBUILD
+++ b/dummy/PKGBUILD
@@ -3,6 +3,6 @@ pkgver=1
 pkgrel=1
 pkgdesc="A dummy package to replace the package you don't need"
 arch=('any')
-_replaces=""
-provides=("$_replaces")
-conflicts=("$_replaces")
+_replaces=()
+provides=(${_replaces[*]})
+conflicts=(${_replaces[*]})
