Use SPDX license identifier

--- a/dnsproxy-bin/PKGBUILD
+++ b/dnsproxy-bin/PKGBUILD
@@ -5,7 +5,7 @@ pkgrel=1
 pkgdesc="Simple DNS proxy with DoH, DoT, DoQ and DNSCrypt support"
 arch=('x86_64')
 url="https://github.com/AdguardTeam/dnsproxy"
-license=('Apache')
+license=('Apache-2.0')
 provides=(dnsproxy)
 conflicts=(dnsproxy dnsproxy-adguard)
 source=(
