Normalize license with SPDX identifier

--- a/ipcalc-redhat/PKGBUILD
+++ b/ipcalc-redhat/PKGBUILD
@@ -6,7 +6,7 @@ pkgrel=2
 pkgdesc="Redhat's modernized ipcalc fork with IPv6 support"
 arch=('x86_64')
 url="https://gitlab.com/ipcalc/ipcalc"
-license=('GPL')
+license=('GPL-2.0-or-later')
 conflicts=('ipcalc')
 depends=('glibc')
 makedepends=('meson' 'ruby-ronn')
