Normalize depends for curl-c-ares

--- a/curl-c-ares/PKGBUILD
+++ b/curl-c-ares/PKGBUILD
@@ -17,10 +17,17 @@ pkgdesc='command line tool and library for transferring data with URLs (built wi
 arch=('x86_64')
 url='https://curl.se/'
 license=('MIT')
-depends=('ca-certificates' 'brotli' 'libbrotlidec.so' 'c-ares' 'libcares.so'
+depends=('ca-certificates'
+         'brotli' 'libbrotlidec.so'
+         'c-ares' 'libcares.so'
          'krb5' 'libgssapi_krb5.so'
-         'libidn2' 'libidn2.so' 'libnghttp2' 'libpsl' 'libpsl.so' 'libssh2' 'libssh2.so'
-         'openssl' 'zlib' 'zstd' 'libzstd.so')
+         'libidn2' 'libidn2.so'
+         'libnghttp2' 'libnghttp2.so'
+         'libpsl' 'libpsl.so'
+         'libssh2' 'libssh2.so'
+         'openssl' 'libcrypto.so' 'libssl.so'
+         'zlib' 'libz.so'
+         'zstd' 'libzstd.so')
 makedepends=('git')
 provides=('curl' 'libcurl.so')
 conflicts=('curl')
